# cpp

./: .clangd.template  .gitignore  career-nvidia-av-drive.md  compile_commands.template.json  cpp_benchmark_guide.md  cpp_benchmark_tracker.md  exercises.md  glossary.md  home.md  memory.md  progress.md  projects-nvidia-physical-ai.md  sources.md
.claude/: settings.local.json
.claude/commands/: grade.md  project.md  teacher.md
concepts/: 002_headers-namespaces.md  003_constructors-and-special-members.md  004_vector-methods.md  005_memory-model.md  007_lidar-data-and-av-pipeline.md  008_class-invariants.md  009_lambdas.md  009_std-algorithms.md  010_exceptions.md  010_file-io-and-parsing.md  011_multi-file-and-cmake.md  012_graphs-and-bfs.md  014_trigonometry.md  compilation.md  constexpr.md  index.md  memory-model-my-notes.md  program-structure.md  std-algorithms.md  value-categories.md  vector-methods.md
coursera/: multi_component.cpp
docs/: copy-vs-reference.md  makefiles.md
projects/001_hello_map/: 001_exercises.md  hello_map.cpp  output-terminal-and-file.md  output.txt  primitives-vs-std.md
projects/002_ref_and_pointers/: 002_exercises.md  002_ref_and_pointers_answers.md  002_ref_and_pointers_quiz.md  nullptr_check.cpp  pointers.cpp  references.cpp  swaptiles.cpp
projects/003_classes_and_structs/: 003_classes_and_structs_answers.md  003_classes_and_structs_quiz.md  003_exercises.md  maptile.cpp
projects/004_stl_containers/: 004_exercises.md  004_stl_containers_answers.md  004_stl_containers_quiz.md  Makefile  tile_map.cpp  tile_router.cpp
projects/005_raii_and_destructors/: 005_exercises.md  005_raii_and_destructors_answers.md  005_raii_and_destructors_quiz.md  Makefile  log.txt  (+5 more)
projects/011_multi_file/: 011_exercises.md  011_multi_file_answers.md  011_multi_file_quiz.md  CMakeLists.txt  Makefile  integration.cpp  main_ex1.cpp  main_ex2.cpp
projects/011_multi_file/include/: gps_waypoint.h  map_tile.h  tile_index.h  waypoint_loader.h
projects/011_multi_file/src/: gps_waypoint.cpp  map_tile.cpp  tile_index.cpp  waypoint_loader.cpp
projects/012_road_graph/: 012_exercises.md  012_road_graph_answers.md  012_road_graph_quiz.md  CMakeLists.txt  Makefile  ex1_types.cpp  ex2_graph.cpp  ex3_bfs.cpp  integration.cpp
projects/012_road_graph/include/: road_graph.h  road_types.h
projects/012_road_graph/src/: road_graph.cpp  road_types.cpp
projects/013_dijkstra/: 013_dijkstra_answers.md  013_dijkstra_quiz.md  013_exercises.md  CMakeLists.txt  ex1_priority_queue.cpp  ex2_dijkstra.cpp  ex3_shortest_path.cpp  integration.cpp
projects/013_dijkstra/data/: road_edges.csv
projects/013_dijkstra/include/: road_graph.h
projects/013_dijkstra/src/: road_graph.cpp
projects/015_astar/: 015_astar_answers.md  015_astar_quiz.md  015_exercises.md  CMakeLists.txt  ex1_heuristic.cpp  ex2_astar.cpp  ex3_benchmark.cpp  integration.cpp
projects/015_astar/data/: sf_roads_sample.geojson
projects/015_astar/include/: road_graph.h
projects/015_astar/src/: road_graph.cpp
stories/: big-picture.md  hd-maps.md  localization.md  map-builder.md  story-of-cpp-outline.md  theory-of-programming.md
(+53 files in other folders)
